[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Visitor.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/WindowArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]

vertices = PoolVector2Array( 728.221, 91.6547, 1015.41, 12.3209, 1010.65, 124.975, 707.595, 494.67, 20.5638, 12.3209, 271.259, 98.0014, 15.8037, 600.978, 253.805, 502.604, 1020.17, 600.978 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 1, 0, 5 ), PoolIntArray( 6, 4, 5, 7 ), PoolIntArray( 8, 6, 7, 3 ), PoolIntArray( 2, 8, 3 ) ]
outlines = [ PoolVector2Array( 20.5638, 12.3209, 1015.41, 12.3209, 1010.65, 124.975, 1020.17, 600.978, 15.8037, 600.978 ), PoolVector2Array( 271.259, 98.0014, 728.221, 91.6547, 707.595, 494.67, 253.805, 502.604 ) ]

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1023.8, 2.10187, 0, 0, 0, 0, 1025.56, 610.401, 0, 0, 0, 0, 5.8678, 612.159, 0, 0, 0, 0, -2.92261, 3.85995, 0, 0, 0, 0, -1.16455, 5.61804, 0, 0, 0, 0, 1023.8, 2.10187 )
}

[node name="Main" type="Node2D"]

script = ExtResource( 1 )
Visitor = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="." index="0"]

position = Vector2( 1248.71, 74.5738 )
scale = Vector2( 0.5, 0.5 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 262084, -2147483643, 0, 262085, 6, 0, 262086, 6, 0, 262087, -536870904, 0, 262088, -1073741822, 0, 262089, -1073741816, 0, 262090, 6, 0, 262091, 6, 0, 262092, -2147483643, 0, 262093, 6, 0, 262094, 6, 0, 262095, 6, 0, 262096, 6, 0, 262097, 6, 0, 262098, -2147483643, 0, 262099, 6, 0, 262100, -536870904, 0, 262101, -1073741822, 0, 262102, -1073741816, 0, 262103, 6, 0, 262104, 6, 0, 262105, 6, 0, 262106, 6, 0, 262107, 6, 0, 262108, -1610612731, 0, 327620, -2147483642, 0, 327621, -1610612727, 0, 327622, -1610612727, 0, 327623, -1610612727, 0, 327624, -1610612727, 0, 327625, -1610612727, 0, 327626, -1610612727, 0, 327627, -1610612727, 0, 327628, -2147483642, 0, 327629, -1610612727, 0, 327630, -1610612727, 0, 327631, -1610612727, 0, 327632, -1610612727, 0, 327633, -1610612727, 0, 327634, -2147483642, 0, 327635, -1610612727, 0, 327636, -1610612727, 0, 327637, -1610612727, 0, 327638, -1610612727, 0, 327639, -1610612727, 0, 327640, -1610612727, 0, 327641, -1610612727, 0, 327642, -1610612727, 0, 327643, -1610612727, 0, 327644, -1610612730, 0, 393156, 1610612744, 0, 393157, -1610612727, 0, 393158, -1610612727, 0, 393159, -1610612727, 0, 393160, -1610612727, 0, 393161, -1610612727, 0, 393162, -1610612727, 0, 393163, -1610612727, 0, 393164, -2147483642, 0, 393165, -1610612727, 0, 393166, -1610612727, 0, 393167, -1610612727, 0, 393168, -1610612727, 0, 393169, -1610612727, 0, 393170, -2147483642, 0, 393171, -1610612727, 0, 393172, -1610612727, 0, 393173, -1610612727, 0, 393174, -1610612727, 0, 393175, -1610612727, 0, 393176, -1610612727, 0, 393177, -1610612727, 0, 393178, -1610612727, 0, 393179, -1610612727, 0, 393180, -1610612730, 0, 458692, 536870914, 0, 458693, -1610612727, 0, 458694, -1610612727, 0, 458695, -1610612727, 0, 458696, -1610612727, 0, 458697, -1610612727, 0, 458698, -1610612727, 0, 458699, -1610612727, 0, 458700, -2147483642, 0, 458701, -1610612727, 0, 458702, -1610612727, 0, 458703, -1610612727, 0, 458704, -1610612727, 0, 458705, -1610612727, 0, 458706, -2147483642, 0, 458707, -1610612727, 0, 458708, -1610612727, 0, 458709, -1610612727, 0, 458710, -1610612727, 0, 458711, -1610612727, 0, 458712, -1610612727, 0, 458713, -1610612727, 0, 458714, -1610612727, 0, 458715, -1610612727, 0, 458716, -1610612730, 0, 524228, 536870920, 0, 524229, -1610612727, 0, 524230, -1610612727, 0, 524231, -1610612727, 0, 524232, -1610612727, 0, 524233, -1610612727, 0, 524234, -1610612727, 0, 524235, -1610612727, 0, 524236, -2147483642, 0, 524237, -1610612727, 0, 524238, -1610612727, 0, 524239, -1610612727, 0, 524240, -1610612727, 0, 524241, -1610612727, 0, 524242, -2147483642, 0, 524243, -1610612727, 0, 524244, -1610612727, 0, 524245, -1610612727, 0, 524246, -1610612727, 0, 524247, -1610612727, 0, 524248, -1610612727, 0, 524249, -1610612727, 0, 524250, -1610612727, 0, 524251, -1610612727, 0, 524252, 1073741832, 0, 589764, -2147483642, 0, 589765, -1610612727, 0, 589766, -1610612727, 0, 589767, -1610612727, 0, 589768, -1610612727, 0, 589769, -1610612727, 0, 589770, -1610612727, 0, 589771, -1610612727, 0, 589772, -2147483642, 0, 589773, -1610612727, 0, 589774, -1610612727, 0, 589775, -1610612727, 0, 589776, -1610612727, 0, 589777, -1610612727, 0, 589778, -536870905, 0, 589779, -1610612727, 0, 589780, -1610612727, 0, 589781, -1610612727, 0, 589782, -1610612727, 0, 589783, -1610612727, 0, 589784, -1610612727, 0, 589785, -1610612727, 0, 589786, -1610612727, 0, 589787, -1610612727, 0, 589788, 2, 0, 655300, -2147483643, 0, 655301, 6, 0, 655302, 6, 0, 655303, -536870905, 0, 655304, -1073741815, 0, 655305, -1073741817, 0, 655306, 6, 0, 655307, 6, 0, 655308, -2147483642, 0, 655309, -1610612727, 0, 655310, -1610612727, 0, 655311, -1610612727, 0, 655312, -1610612727, 0, 655313, -1610612727, 0, 655314, -1073741815, 0, 655315, -1610612727, 0, 655316, -1610612727, 0, 655317, -1610612727, 0, 655318, -1610612727, 0, 655319, -1610612727, 0, 655320, -1610612727, 0, 655321, -1610612727, 0, 655322, -1610612727, 0, 655323, -1610612727, 0, 655324, 8, 0, 720836, -2147483642, 0, 720837, -1610612727, 0, 720838, -1610612727, 0, 720839, -1610612727, 0, 720840, -1610612727, 0, 720841, -1610612727, 0, 720842, -1610612727, 0, 720843, -1610612727, 0, 720844, -2147483642, 0, 720845, -1610612727, 0, 720846, -1610612727, 0, 720847, -1610612727, 0, 720848, -1610612727, 0, 720849, -1610612727, 0, 720850, -1610612729, 0, 720851, -1610612727, 0, 720852, -1610612727, 0, 720853, -1610612727, 0, 720854, -1610612727, 0, 720855, -1610612727, 0, 720856, -1610612727, 0, 720857, -1610612727, 0, 720858, -1610612727, 0, 720859, -1610612727, 0, 720860, -1610612730, 0, 786372, 1610612744, 0, 786373, -1610612727, 0, 786374, -1610612727, 0, 786375, -1610612727, 0, 786376, -1610612727, 0, 786377, -1610612727, 0, 786378, -1610612727, 0, 786379, -1610612727, 0, 786380, -2147483642, 0, 786381, -1610612727, 0, 786382, -1610612727, 0, 786383, -1610612727, 0, 786384, -1610612727, 0, 786385, -1610612727, 0, 786386, -2147483642, 0, 786387, -1610612727, 0, 786388, -1610612727, 0, 786389, -1610612727, 0, 786390, -1610612727, 0, 786391, -1610612727, 0, 786392, -1610612727, 0, 786393, -1610612727, 0, 786394, -1610612727, 0, 786395, -1610612727, 0, 786396, -1610612730, 0, 851908, 536870914, 0, 851909, -1610612727, 0, 851910, -1610612727, 0, 851911, -1610612727, 0, 851912, -1610612727, 0, 851913, -1610612727, 0, 851914, -1610612727, 0, 851915, -1610612727, 0, 851916, -2147483642, 0, 851917, -1610612727, 0, 851918, -1610612727, 0, 851919, -1610612727, 0, 851920, -1610612727, 0, 851921, -1610612727, 0, 851922, -2147483642, 0, 851923, -1610612727, 0, 851924, -1610612727, 0, 851925, -1610612727, 0, 851926, -1610612727, 0, 851927, -1610612727, 0, 851928, -1610612727, 0, 851929, -1610612727, 0, 851930, -1610612727, 0, 851931, -1610612727, 0, 851932, -1610612730, 0, 917444, 536870920, 0, 917445, -1610612727, 0, 917446, -1610612727, 0, 917447, -1610612727, 0, 917448, -1610612727, 0, 917449, -1610612727, 0, 917450, -1610612727, 0, 917451, -1610612727, 0, 917452, -2147483642, 0, 917453, -1610612727, 0, 917454, -1610612727, 0, 917455, -1610612727, 0, 917456, -1610612727, 0, 917457, -1610612727, 0, 917458, -2147483642, 0, 917459, -1610612727, 0, 917460, -1610612727, 0, 917461, -1610612727, 0, 917462, -1610612727, 0, 917463, -1610612727, 0, 917464, -1610612727, 0, 917465, -1610612727, 0, 917466, -1610612727, 0, 917467, -1610612727, 0, 917468, -1610612730, 0, 982980, -2147483642, 0, 982981, -1610612727, 0, 982982, -1610612727, 0, 982983, -1610612727, 0, 982984, -1610612727, 0, 982985, -1610612727, 0, 982986, -1610612727, 0, 982987, -1610612727, 0, 982988, -2147483642, 0, 982989, -1610612727, 0, 982990, -1610612727, 0, 982991, -1610612727, 0, 982992, -1610612727, 0, 982993, -1610612727, 0, 982994, -2147483642, 0, 982995, -1610612727, 0, 982996, -1610612727, 0, 982997, -1610612727, 0, 982998, -1610612727, 0, 982999, -1610612727, 0, 983000, -1610612727, 0, 983001, -1610612727, 0, 983002, -1610612727, 0, 983003, -1610612727, 0, 983004, -1610612730, 0, 1048516, -2147483642, 0, 1048517, -1610612727, 0, 1048518, -1610612727, 0, 1048519, -1610612727, 0, 1048520, -1610612727, 0, 1048521, -1610612727, 0, 1048522, -1610612727, 0, 1048523, -1610612727, 0, 1048524, -2147483642, 0, 1048525, -1610612727, 0, 1048526, -1610612727, 0, 1048527, -1610612727, 0, 1048528, -1610612727, 0, 1048529, -1610612727, 0, 1048530, -2147483642, 0, 1048531, -1610612727, 0, 1048532, -1610612727, 0, 1048533, -1610612727, 0, 1048534, -1610612727, 0, 1048535, -1610612727, 0, 1048536, -1610612727, 0, 1048537, -1610612727, 0, 1048538, -1610612727, 0, 1048539, -1610612727, 0, 1048540, -1610612730, 0, 1114052, -2147483642, 0, 1114053, -1610612727, 0, 1114054, -1610612727, 0, 1114055, -1610612727, 0, 1114056, -1610612727, 0, 1114057, -1610612727, 0, 1114058, -1610612727, 0, 1114059, -1610612727, 0, 1114060, -2147483642, 0, 1114061, -1610612727, 0, 1114062, -1610612727, 0, 1114063, -1610612727, 0, 1114064, -1610612727, 0, 1114065, -1610612727, 0, 1114066, -2147483643, 0, 1114067, 6, 0, 1114068, 6, 0, 1114069, 6, 0, 1114070, 6, 0, 1114071, 6, 0, 1114072, 6, 0, 1114073, 6, 0, 1114074, 6, 0, 1114075, 6, 0, 1114076, -1610612731, 0, 1179588, -2147483642, 0, 1179589, -1610612727, 0, 1179590, -1610612727, 0, 1179591, -1610612727, 0, 1179592, -1610612727, 0, 1179593, -1610612727, 0, 1179594, -1610612727, 0, 1179595, -1610612727, 0, 1179596, -2147483642, 0, 1179597, -1610612727, 0, 1179598, -1610612727, 0, 1179599, -1610612727, 0, 1179600, -1610612727, 0, 1179601, -1610612727, 0, 1179602, -2147483642, 0, 1179603, -1610612727, 0, 1179604, -1610612727, 0, 1179605, -1610612727, 0, 1179606, -1610612727, 0, 1179607, -1610612727, 0, 1179608, -1610612727, 0, 1179609, -1610612727, 0, 1179610, -1610612727, 0, 1179611, -1610612727, 0, 1179612, -1610612730, 0, 1245124, -2147483642, 0, 1245125, -1610612727, 0, 1245126, -1610612727, 0, 1245127, -1610612727, 0, 1245128, -1610612727, 0, 1245129, -1610612727, 0, 1245130, -1610612727, 0, 1245131, -1610612727, 0, 1245132, -2147483642, 0, 1245133, -1610612727, 0, 1245134, -1610612727, 0, 1245135, -1610612727, 0, 1245136, -1610612727, 0, 1245137, -1610612727, 0, 1245138, -2147483642, 0, 1245139, -1610612727, 0, 1245140, -1610612727, 0, 1245141, -1610612727, 0, 1245142, -1610612727, 0, 1245143, -1610612727, 0, 1245144, -1610612727, 0, 1245145, -1610612727, 0, 1245146, -1610612727, 0, 1245147, -1610612727, 0, 1245148, -1610612730, 0, 1310660, 1610612744, 0, 1310661, -1610612727, 0, 1310662, -1610612727, 0, 1310663, -1610612727, 0, 1310664, -1610612727, 0, 1310665, -1610612727, 0, 1310666, -1610612727, 0, 1310667, -1610612727, 0, 1310668, -536870905, 0, 1310669, -1610612727, 0, 1310670, -1610612727, 0, 1310671, -1610612727, 0, 1310672, -1610612727, 0, 1310673, -1610612727, 0, 1310674, -536870905, 0, 1310675, -1610612727, 0, 1310676, -1610612727, 0, 1310677, -1610612727, 0, 1310678, -1610612727, 0, 1310679, -1610612727, 0, 1310680, -1610612727, 0, 1310681, -1610612727, 0, 1310682, -1610612727, 0, 1310683, -1610612727, 0, 1310684, 1073741832, 0, 1376196, 536870914, 0, 1376197, -1610612727, 0, 1376198, -1610612727, 0, 1376199, -1610612727, 0, 1376200, -1610612727, 0, 1376201, -1610612727, 0, 1376202, -1610612727, 0, 1376203, -1610612727, 0, 1376204, -1073741815, 0, 1376205, -1610612727, 0, 1376206, -1610612727, 0, 1376207, -1610612727, 0, 1376208, -1610612727, 0, 1376209, -1610612727, 0, 1376210, -1073741815, 0, 1376211, -1610612727, 0, 1376212, -1610612727, 0, 1376213, -1610612727, 0, 1376214, -1610612727, 0, 1376215, -1610612727, 0, 1376216, -1610612727, 0, 1376217, -1610612727, 0, 1376218, -1610612727, 0, 1376219, -1610612727, 0, 1376220, 2, 0, 1441732, 536870920, 0, 1441733, -1610612727, 0, 1441734, -1610612727, 0, 1441735, -1610612727, 0, 1441736, -1610612727, 0, 1441737, -1610612727, 0, 1441738, -1610612727, 0, 1441739, -1610612727, 0, 1441740, -1610612729, 0, 1441741, -1610612727, 0, 1441742, -1610612727, 0, 1441743, -1610612727, 0, 1441744, -1610612727, 0, 1441745, -1610612727, 0, 1441746, -1610612729, 0, 1441747, -1610612727, 0, 1441748, -1610612727, 0, 1441749, -1610612727, 0, 1441750, -1610612727, 0, 1441751, -1610612727, 0, 1441752, -1610612727, 0, 1441753, -1610612727, 0, 1441754, -1610612727, 0, 1441755, -1610612727, 0, 1441756, 8, 0, 1507268, -2147483642, 0, 1507269, -1610612727, 0, 1507270, -1610612727, 0, 1507271, -1610612727, 0, 1507272, -1610612727, 0, 1507273, -1610612727, 0, 1507274, -1610612727, 0, 1507275, -1610612727, 0, 1507276, -2147483642, 0, 1507277, -1610612727, 0, 1507278, -1610612727, 0, 1507279, -1610612727, 0, 1507280, -1610612727, 0, 1507281, -1610612727, 0, 1507282, -2147483642, 0, 1507283, -1610612727, 0, 1507284, -1610612727, 0, 1507285, -1610612727, 0, 1507286, -1610612727, 0, 1507287, -1610612727, 0, 1507288, -1610612727, 0, 1507289, -1610612727, 0, 1507290, -1610612727, 0, 1507291, -1610612727, 0, 1507292, -1610612730, 0, 1572804, -2147483642, 0, 1572805, -1610612727, 0, 1572806, -1610612727, 0, 1572807, -1610612727, 0, 1572808, -1610612727, 0, 1572809, -1610612727, 0, 1572810, -1610612727, 0, 1572811, -1610612727, 0, 1572812, -2147483642, 0, 1572813, -1610612727, 0, 1572814, -1610612727, 0, 1572815, -1610612727, 0, 1572816, -1610612727, 0, 1572817, -1610612727, 0, 1572818, -2147483642, 0, 1572819, -1610612727, 0, 1572820, -1610612727, 0, 1572821, -1610612727, 0, 1572822, -1610612727, 0, 1572823, -1610612727, 0, 1572824, -1610612727, 0, 1572825, -1610612727, 0, 1572826, -1610612727, 0, 1572827, -1610612727, 0, 1572828, -1610612730, 0, 1638340, -1073741819, 0, 1638341, 1073741830, 0, 1638342, 1073741830, 0, 1638343, -1610612728, 0, 1638344, -2147483646, 0, 1638345, -2147483640, 0, 1638346, 1073741830, 0, 1638347, 1073741830, 0, 1638348, -1073741819, 0, 1638349, 1073741830, 0, 1638350, -1610612725, 0, 1638351, -2147483638, 0, 1638352, -2147483637, 0, 1638353, 1073741830, 0, 1638354, -1073741819, 0, 1638355, 1073741830, 0, 1638356, -1610612728, 0, 1638357, -2147483646, 0, 1638358, -2147483640, 0, 1638359, 1073741830, 0, 1638360, 1073741830, 0, 1638361, 1073741830, 0, 1638362, 1073741830, 0, 1638363, 1073741830, 0, 1638364, 1610612741, 0 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]

[node name="WindowArea" parent="TileMap" index="0" instance=ExtResource( 4 )]

position = Vector2( -1090.74, 275.507 )

[node name="WindowArea4" parent="TileMap" index="1" instance=ExtResource( 4 )]

position = Vector2( -1108.83, 655.46 )

[node name="WindowArea2" parent="TileMap" index="2" instance=ExtResource( 4 )]

position = Vector2( -1355.82, 802.206 )
rotation = 0.0

[node name="WindowArea3" parent="TileMap" index="3" instance=ExtResource( 4 )]

position = Vector2( -1779.71, 817.715 )
rotation = 0.0

[node name="WindowArea5" parent="TileMap" index="4" instance=ExtResource( 4 )]

position = Vector2( -1928.86, 646.354 )
rotation = 1.5708

[node name="WindowArea6" parent="TileMap" index="5" instance=ExtResource( 4 )]

position = Vector2( -1928.86, 382.965 )
rotation = 1.5708

[node name="WindowArea7" parent="TileMap" index="6" instance=ExtResource( 4 )]

position = Vector2( -1935.2, 208.431 )
rotation = 1.5708

[node name="WindowArea8" parent="TileMap" index="7" instance=ExtResource( 4 )]

position = Vector2( -1770.19, 78.3236 )
rotation = 3.14159

[node name="WindowArea9" parent="TileMap" index="8" instance=ExtResource( 4 )]

position = Vector2( -1354.48, 81.497 )
rotation = 3.14159

[node name="Player" parent="." index="1" instance=ExtResource( 5 )]

position = Vector2( 621.839, 221.296 )
speed = 3

[node name="VisitorSpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Door" type="Position2D" parent="." index="3"]

position = Vector2( 478.201, 483.475 )

[node name="VisitorNavigation" type="Navigation2D" parent="." index="4"]

[node name="VisitorNavigationPolygon" type="NavigationPolygonInstance" parent="VisitorNavigation" index="0"]

navpoly = SubResource( 1 )
enabled = true

[node name="VisitorSpawnPath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 2 )

[node name="VisitorSpawnLocation" type="PathFollow2D" parent="VisitorSpawnPath" index="0"]

position = Vector2( 1023.8, 2.10187 )
rotation = 1.56788
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[connection signal="timeout" from="VisitorSpawnTimer" to="." method="_on_VisitorSpawnTimer_timeout"]


